crates/ssa-workflow-derive/tests/ui/canonical_encode/union.stderr
error: CanonicalEncode can only be derived for structs or unit enums
 --> tests/ui/canonical_encode/union.rs:4:1
  |
4 | union BadUnion {
  | ^^^^^
