crates/ssa-workflow-derive/tests/ui/canonical_encode/union.rs
use ssa_workflow_derive::CanonicalEncode;

#[derive(CanonicalEncode)]
union BadUnion {
    value: u64,
}

fn main() {}
